# Personal-Newsletter-Crew

./: .gitignore  README.md  pyproject.toml
prototyping/: personal-newsletter.ipynb  research.ipynb
src/startup_newsletter_crew/: crew.py  main.py
src/startup_newsletter_crew/config/: agents.yaml  tasks.yaml
