[project]
name = "startup_newsletter_crew"
version = "0.1.0"
description = "startup_newsletter_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0",
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "openai>=1.107.3",
    "openai-agents>=0.3.2",
    "spider-client>=0.1.77",
    "tavily-python>=0.7.12",
]

[project.scripts]
startup_newsletter_crew = "startup_newsletter_crew.main:run"
run_crew = "startup_newsletter_crew.main:run"
train = "startup_newsletter_crew.main:train"
replay = "startup_newsletter_crew.main:replay"
test = "startup_newsletter_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
